<resources>
    <string name="app_name">Kaori-san</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_btn_login_facebook">Login With Facebook</string>
    <string name="logout_btn_login_facebook">Logout Facebook</string>
    <string name="login_btn_login_google">Login With Google</string>
    <string name="applicationId">237471026413628</string>
    <string name="open_task">Open\nTask</string>
    <string name="closed_task">Closed\nTask</string>
    <string name="available_task">Available Task</string>
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="google_client_id">127287156715&#8211;6mt3jfpe9iu2ailg81sh134g1kjdkugl.apps.googleusercontent.com</string>
    <string name="google_redirect_uri">urn:ietf:wg:oauth:2.0:oob</string>
    <string name="google_client_secret">SrxYZrurlabHjcAW2p7iVStF</string>
    <string name="google_auth_code">4/eT0c8p63&#8211;4av5QCNFjYgW_oIE7yK.kuj2zq8GDpsVXE-sT2ZLcbRRDTVdgQI</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in.</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="plus_write_moment_status">Saving moment</string>
    <string name="plus_remove_moment_status">Removing moment</string>
    <string name="plus_one_small_name">Small +1 button</string>
    <string name="plus_one_medium_name">Medium +1 button</string>
    <string name="plus_one_tall_name">Tall +1 button</string>
    <string name="plus_one_standard_name">Standard +1 button</string>
    <string name="plus_one_standard_ann_name">Standard +1 button (with inline annotation)</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">https://developers.google.com/+/mobile/android/</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="app_id">701590745792-clqentfla4285dtoovdmc9mck2v2taom.apps.googleusercontent.com</string>
    <string name="new_message">New Message</string>
    <string name="logo_image_description">KariSan Logo</string>
    <string name="line_horizontal_image_description">Line</string>
    <string name="avatar_image_description">User avatar</string>
    <string name="tick_image_description">Tick</string>
    <string name="request">Request</string>
    <string name="txt_review">Review</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_title_audio_screen_playrecord">We\'re listening</string>
    <string name="back">Back</string>
    <string name="title_activity_account_dashboard">AccountDashboardActivity</string>
    <string name="txt_my_account">My Account</string>
    <string name="txt_done">Done</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_premier_plan">N/A</string>
    <string name="txt_monthly_subcription">MONTHLY SUBCRIPTION</string>
    <string name="txt_term_and_condition">Terms &amp; Conditions</string>
    <string name="txt_email_support">Email support</string>
    <string name="get_data_failed_msg">Get data failed! Please login again!</string>
    <string name="txt_rate_us">Rate us</string>
    <string name="txt_common_requests">Common requests</string>
    <string name="txt_n_a">N/A</string>
    <string name="txt_renewal_date">RENEWAL DATE</string>
    <string name="txt_requests_used">REQUESTS USED</string>
    <string name="seeMoreRequest">See more requests</string>
    <string name="btn_create_request_text">Create a text request</string>
    <string name="txt_normal_text_request">Normal text request</string>
    <string name="title_activity_request_view">RequestViewActivity</string>
    <string name="txt_reply">Reply</string>
    <string name="txt_task">Task</string>
    <string name="btn_continue">Continue</string>
    <string name="txt_urgent_text_request">Urgent text request</string>
    <string name="text_request_pop_up_not">Uses 2 requests or 500 yen.</string>
    <string name="txt_attachment">Attachments</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_take_photo">Take a Photo</string>
    <string name="background_choose_photo_button">choose photo button background</string>
    <string name="btn_choose_photo_exist">Choose Existing</string>
    <string name="background_take_photo_button">take photo button background</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_new_request">New Request</string>
    <string name="txt_title">Title</string>
    <string name="task_title" formatted="false">Task</string>
    <string name="water_mark_question_of_new_request_editor">What can we do for you?</string>
    <string name="btn_back">Back</string>
    <string name="splash_image_description">splash image description</string>
    <string name="complete">COMPLETE</string>
    <string name="time_last_state">10 mins ago&#8230;</string>
    <string name="title_task_item">this is a avtivity task. this is a avtivity task</string>
    <string name="number_replies_of_task">12</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="btn_reply">Reply</string>
    <string name="title_activity_choose_photo_exist">ChoosePhotoExistActivity</string>
    <string name="title_activity_new_request">NewRequestActivity</string>
    <string name="initial_request">Initial Request</string>
    <string name="photo_name_sample">Photo.jpg</string>
    <string name="_1">1</string>
    <string name="tap_to_attachment">Tap to add Attachments</string>
    <string name="title_activity_common__request_">Common_Request_Activity</string>
    <string name="title_activity_common_request">CommonRequestActivity</string>
    <string name="settings">Settings</string>
    <string name="common_requests">Common Requests</string>
    <string name="general">General</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="rate_question">How did we do?</string>
    <string name="btn_like_image_description">Like button</string>
    <string name="btn_dislike_image_description">Dislike button</string>
    <string name="play_recording">Play recording</string>
    <string name="re_recording">Re-recording</string>
    <string name="recording">Recording</string>
    <string name="we_listening">We\'re listening&#8230;</string>
    <string name="btn_create_voice_request">Create a voice request</string>
    <string name="line_dashed_background_image">border line dashed</string>
    <string name="sample_request_use">0 of 0</string>
    <string name="user_avatar">User avatar</string>
    <string name="restaurant">Restaurant</string>
    <string name="research">Research</string>
    <string name="weddings">Weddings</string>
    <string name="travel">Travel</string>
    <string name="kids">Kids</string>
    <string name="at_home">At Home</string>
    <string name="at_work">At Work</string>
    <string name="title_activity_send_email">SendEmailActivity</string>
    <string name="txt_send_email">Send Email</string>
    <string name="menu_settings">Settings</string>
    <string name="str_btn_chart">Pie Chart</string>
    <string name="local_gallery">Local Gallery</string>
    <string name="login_note">* Only for existing users</string>
    <string name="recommended_task">RECOMMENDED TASK LIST</string>
    <string name="task_sample_1">Want to arrange car driver Want to arrange car driver</string>
    <string name="txt_open_task"><![CDATA[some test line 1 <br />some test line 2]]></string>
    <string name="title_activity_terms_and_conditions">TermsAndConditionsActivity</string>
    <string name="term_and_condition">Terms &amp; Conditions</string>
    <string name="btn_send">Send</string>
    <string name="to">To:</string>
    <string name="cc">Cc/Bb</string>
    <string name="subject">Subject:</string>
    <string name="take_photo_image_description">Take photo image</string>
    <string name="title_activity_audio_recording">AudioRecordingActivity</string>
    <string name="stop">Stop</string>
    <string name="stop_voice_recording">Stop Voice Recording</string>
    <string name="play">Play</string>
    <string name="email_support">support@kaorisan.com</string>
    <string name="email_title"></string>
    <string name="request_success_message">Please see attachment for request instructions</string>
    <string name="add_button">add button</string>
    <string name="image_audio_attach">audio attach</string>
    <string name="photo_attach">photo attach</string>
    <string name="refreshlistview_updating">Updating…</string>
    <string name="refreshlistview_release">Release to refresh…</string>
    <string name="refreshlistview_pulldown">Pull down to refresh…</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="preview">Preview</string>
    <string name="retake">Retake</string>
    <string name="use">Use</string>
    <string name="please_waiting_msg">Please wait&#8230;</string>
    <string name="image_preview_description">image preview</string>
    <string name="add_attach_type">Add an attachment</string>
    <string name="no_attachment">No Attachments</string>
    <string name="btn_see_more_request">See more requests</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">just now</string>
    <string name="time_ago_minute">%d minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hours">%d hours</string>
    <string name="time_ago_day">%d day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_years">%d years</string>
    <string name="ini_request">Initial request</string>
</resources>