<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#e9e9e9"
        android:drawableLeft="@drawable/attach_gray"
        android:drawablePadding="10dp"
        android:gravity="center|left"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:text="@string/add_attach_type"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_take_photo_img"
        android:contentDescription="@string/background_take_photo_button"
        android:paddingLeft="40dp"
        android:text="@string/btn_take_photo"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChooseExisting"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/choose_photo_bg"
        android:contentDescription="@string/background_choose_photo_button"
        android:paddingLeft="35dp"
        android:text="@string/btn_choose_photo_exist"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>